Iniciando com Express Validator

--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -11,11 +11,24 @@
 
 		<form action="/noticias/salvar" method="post">
 			<label>Título</label>
+
 			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia" />
 			<br />
+
+			<input type="text" id="resumo" name="resumo" placeholder="Resumo da Notícia" />
+			<br />
+
+			<input type="text" id="autor" name="autor" placeholder="Autor da Notícia" />
+			<br />
+
+			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data_noticia da Notícia" />
+			<br />
+
 			<label>Notícia</label>
 			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
 			<br />
+
+
 			<input type="submit" value="Enviar" />
 		</form>
 
