--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -9,25 +9,38 @@
 		<h1>Adicionar notícia</h1>
 		<br />
 
+		<%if(typeof validacao != 'undefined' ){ %> 
+			<ul>
+				<% for(var i=0; i < validacao.length; i++) { %>
+					<li>
+						<%= validacao[i].msg %>
+					</li>
+				<% } %>
+			</ul>
+		<% } %>
+
 		<form action="/noticias/salvar" method="post">
 			<label>Título</label>
-
-			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia" />
+			<input type="text" id="titulo" name="titulo" value="<%= noticia.titulo %>" placeholder="Título da Notícia" />
 			<br />
 
-			<input type="text" id="resumo" name="resumo" placeholder="Resumo da Notícia" />
+			<label>Resumo</label>
+			<input type="text" id="resumo" name="resumo" value="<%= noticia.resumo %>" placeholder="Resumo da Notícia" />
 			<br />
 
-			<input type="text" id="autor" name="autor" placeholder="Autor da Notícia" />
+			<label>Autor</label>
+			<input type="text" id="autor" name="autor" value="<%= noticia.autor %>" placeholder="Autor da Notícia" />
 			<br />
 
-			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data_noticia da Notícia" />
+			<label>Data Notícia</label>
+			<input type="date" id="data_noticia" name="data_noticia" value="<%= noticia.data_noticia %>" placeholder="Data_noticia da Notícia" />
 			<br />
 
 			<label>Notícia</label>
-			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
+			<textarea id="noticia" name="noticia" rows="5" cols="30">
+					<%= noticia.noticia %>
+			</textarea>
 			<br />
-
 
 			<input type="submit" value="Enviar" />
 		</form>
